# arma

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MAINTAINERS.md  Makefile  README.md  a_real_settings.json  docker-compose.yaml  format.json  main.py  pyproject.toml  teste.py
.env/: pyvenv.cfg
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: code_quality.yaml  git_pages.yaml  static.yml
app/: api.py  main.py
doc/: help.html  thanks.html
doc/.doctrees/: CONTRIBUTING.doctree  environment.pickle  index.doctree  mocking.doctree  sponsor.doctree
doc/_sources/: CONTRIBUTING.md  help.md  scenarios.md  thanks.md
doc/source/: conf.py
docs/: CODE_OF_CONDUCT.html  CONTRIBUTING.html  flowchart.html  genindex.html  search.html  searchindex.js  sponsor.html
docs/.doctrees/: CODE_OF_CONDUCT.doctree  help.doctree  scenarios.doctree  thanks.doctree  ways_to_use.doctree
docs/_build/: index.html  scenarios.html  searchindex.js
docs/_build/.doctrees/: CODE_OF_CONDUCT.doctree  CONTRIBUTING.doctree  environment.pickle  help.doctree  index.doctree  scenarios.doctree  sponsor.doctree  thanks.doctree
docs/_build/_sources/: index.md
docs/_build/_static/: documentation_options.js
docs/_sources/: CODE_OF_CONDUCT.md  mocking.md
docs/source/: help.md  scenarios.md  sponsor.md  ways_to_use.md
files/: openapi.json  openapi.yaml
functions/: endpoints_functions.py  export_to_yaml.py  query_params.py  read_settings.py  schemas_service.py  syncronize.py  url_handle.py
functions_to_endpoints/: main.py
middleware/: exceptions.py  handler.py  schemas.py
tests/: fixtures.py  test_build_schemas.py  test_main.py  test_read_settings.py  test_url_handler.py
yaml/: 1.yaml  2.yaml
