[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.poetry]
name = "a-real-mock-api"
version = "0.1.0"
description = "A real server to mock any api , really easy to use"
authors = ["Daniel Soares Martins <daniel@soaresmartins.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
rocketry = "^2.5.1"
schedule = "^1.2.2"
requests = "^2.32.3"
apscheduler = "^3.10.4"
aiohttp = "^3.9.5"
aiofiles = "^24.1.0"
jsonschema = "^4.22.0"
jsf = "^0.11.2"

[tool.poetry.dev-dependencies]
