[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.poetry]
name = "app"
version = "1.0.0"
description = "A real server to mock any api , really easy to use"
authors = ["Daniel Soares Martins <daniel@soaresmartins.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
rocketry = "^2.5.1"
schedule = "^1.2.2"
requests = "^2.32.3"
apscheduler = "^3.10.4"
aiohttp = "^3.9.5"
aiofiles = "^24.1.0"
jsonschema = "^4.22.0"
jsf = "^0.11.2"
ruamel-yaml = "^0.18.6"
coverage = "^7.6.1"
sphinx = "^8.0.2"
sphinx-design = "^0.6.1"
myst-parser = "^4.0.0"
sphinx-autobuild = "^2024.4.16"
sphinx-book-theme = "^1.1.3"

[tool.poetry.dev-dependencies]
